chore: authorizate role
